@@ -10,7 +10,7 @@
     <p><%= l('Drag and drop files in the appropriate area or use the traditional way to send files and the files will be chunked, encrypted and sent to the server. You will get two links per file: a download link, that you give to the people you want to share the file with and a deletion link, allowing you to delete the file whenever you want.') %></p>
     <p><%= l('You can see the list of your files by clicking on the "My files" link at the top right of this page.') %></p>
     <h3><%= l('How to report an illegal file?') %></h3>
-    <p><%= l('Please contact the administrator: %1', config('contact')) %></p>
+    <p><%== l('Please contact the administrator: %1', config('contact')) %></p>
     <h3><%= l('Who wrote this software?') %></h3>
     <p><%== l('The original (and only for now) author is <a href="https://fiat-tux.fr" class="classic">Luc Didry</a>. If you want to support him, you can do it via <a href="https://www.tipeee.com/fiat-tux" class="classic">Tipeee</a> or via <a href="https://liberapay.com/sky/" class="classic">Liberapay</a>.') %><br>
         <%== l('A thank you with a photo of kitten on <a href="https://framasphere.org/people/b13eb6b0beac0131e7e32a0000053625" class="classic">Diaspora*</a> or <a href="https://framapiaf.org/@framasky" class="classic">Mastodon</a> is cool too ;-)') %></p>
